fixed tab-behaviour of video-button. Fixed tabs font on mobile

--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -165,6 +165,13 @@
 .gym__play-button {
   cursor: pointer;
 
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+
   &:hover,
   &:focus {
     opacity: 0.8;
